# franka-fr3-arm-control

./: README.md
src/franka_task_planning/: CMakeLists.txt  package.xml
src/panda_pick_bringup/: CMakeLists.txt  package.xml
src/panda_pick_bringup/config/: controllers.yaml
src/panda_pick_bringup/launch/: cricket.launch.py  moveit_demo.launch.py  pick_and_place.launch.py
src/panda_pick_bringup/models/cricket_ball/: model.config  model.sdf
src/panda_pick_bringup/models/cricket_scene/: model.config  model.sdf
src/panda_pick_bringup/rviz/: pick_and_place.rviz
src/panda_pick_bringup/scripts/: bowling.py  bowling_joint-detach.py  bowling_joint.py  ellipse_trajectory.py
src/panda_pick_bringup/urdf/: d435_wrist_camera.xacro  fr3_with_camera.urdf.xacro
src/panda_pick_bringup/worlds/: cricket_world.sdf
