<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panda_pick_bringup</name>
  <version>0.0.0</version>
  <description>Bringup launch files for Franka pick-and-place simulation with RGB-D camera</description>
  <maintainer email="vbwanere@gmail.com">vbwanere</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>franka_description</depend>
  <depend>franka_fr3_moveit_config</depend>
  <depend>franka_gazebo_bringup</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <exec_depend>realsense2_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
